k8s/udcn-jaeger-tracing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
